front/src/components/Home/Ride/ride.scss
@use '../../../styles/vars';

.ride {
  position: fixed;
  z-index: 25;
  height: 450px;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: #fff;
  display : flex;
  justify-content: space-evenly;
  align-items: center;
  padding: vars.$smallGutter;
  &__flex {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: vars.$smallGutter;
    &__leftButton {
      margin-right: vars.$smallGutter;
    }
  } 
  &__title {
    font-family: vars.$titleFont;
    color: vars.$mainColor;
    font-size: vars.$bigGutter;
    margin-bottom: vars.$smallGutter;
  }
    
  &__scroll {
    height: 300px;
    width: 100%;
    overflow-y: auto;;
    text-align: center;
    margin: 0 auto;

    &__calendar {
      display: flex;
    align-items: center;
    justify-content: center;
    color: vars.$secondaryColor;
    font-family: vars.$bodyFont;
    margin-bottom: vars.$smallGutter;
    &__text {
      margin-left: vars.$smallGutter;
    }
    }

    &__flex {
      display: flex;
      justify-content: space-evenly;
    }

    &__descriptionText {
      margin-top : vars.$smallGutter;
    }
    
    &__flexDescription {
      display: flex;
      border: 2px solid vars.$secondaryColor;
      padding: vars.$smallGutter;
      border-radius: 5px;
      margin-bottom: vars.$bigGutter;
      &__text {
        width: 100%;
        padding: vars.$smallGutter;
        text-align: left;
  
      }
      &__emoji {
        display: flex;
        justify-content: center;
        flex-direction: column;
        flex-wrap: wrap;
        width: 30%;
        margin: 0 auto;
        &__text {
          text-align: left;
        }
      }
    }
    
    &__comments {
      height: 200px;
      width: 100%;
      scroll-behavior: auto;
      overflow-y: scroll;
      border: 2px solid vars.$secondaryColor;
      border-radius: 5px;
      padding: vars.$smallGutter;
      &__line {
        display: flex;
        align-items: center;
        &__comment {
          background-color: rgba(105,124,55,0.15);
          padding: vars.$smallGutter;
          border-radius: 5px;
          width: 100%;
          text-align: left;

        }
        &__column {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          margin-right: vars.$smallGutter;
          &__date {
            margin-top: 3px;
            font-size: 0.7em;
          }
          &__avatar {
            width: 100%;
            
          }
        }
        
      }
    }
    }

  &__bottom {
    display: flex;
    justify-content: space-evenly;
  }

  &__mainUserButton {
    margin-top: -60px;
  }
}


.ride_commentForm{
  display: flex;
  flex-direction: row;
  width: 100%;
  margin-top: vars.$smallGutter;
}

.input_small_ride {
  border-radius: 5px;
  border: 2px solid vars.$secondaryColor;
  padding: 0.5em;
  display: block;
  width: 70%;
  margin: 0 auto;
  font-family: vars.$bodyFont;
  font-size: 0.8rem;
  flex-grow: 1;
  &:focus {
    border: 2px solid vars.$accentColor;
  }
}

.ride_button_small_green {
  width: 30%;
  margin: 0 auto;
  display: block;
  background-color: vars.$secondaryColor;
  font-family: vars.$bodyFont;
  font-size: 0.8rem;
  color: #fff;
  border: none;
  border-radius: 5px;
  padding: (vars.$smallGutter)/3;
  font-weight: bold;
  margin-left: vars.$smallGutter;
}

.button_small:hover {
  background-color: vars.$secondaryColor;
}




@media screen and (min-width: 1300px) {
  .ride {
    display: block;
    position: absolute;
    height: 33.33vh;
    width: 33%;
    right: 0;
    z-index: 1000;
    background-color: #fff;
  }
}

// scrollbar
/* width */
.ride__scroll::-webkit-scrollbar {
  width: 7px;
}

/* Track */
.ride__scroll::-webkit-scrollbar-track {
  background: rgba(104, 124, 54, 0.28);
}

/* Handle */
.ride__scroll::-webkit-scrollbar-thumb {
  background: rgba(104, 124, 54, 0.28);
}

/* Handle on hover */
.ride__scroll::-webkit-scrollbar-thumb:hover {
  background: rgba(104, 124, 54, 0.37);
}

/* width */
.ride__scroll__comments::-webkit-scrollbar {
  width: 7px;
}

/* Track */
.ride__scroll__comments::-webkit-scrollbar-track {
  background: rgba(104, 124, 54, 0.28);
}

/* Handle */
.ride__scroll__comments::-webkit-scrollbar-thumb {
  background: rgba(104, 124, 54, 0.28);
}

/* Handle on hover */
.ride__scroll__comments::-webkit-scrollbar-thumb:hover {
  background: rgba(104, 124, 54, 0.37);
}

